[package]
name = "yew_server_hook"
version = "0.2.1"
edition = "2021"
authors = ["Rouan van der Ende (rouan@netron.dev)"]
description = "A procedural macro that generates both server-side API handlers and client-side Yew hooks from a single function definition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/netrondev/yew_crates"
keywords = ["yew", "web", "fullstack", "macro", "axum"]
categories = ["web-programming", "wasm"]
readme = "README.md"

[lib]
proc-macro = true

[features]
ssr = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
inventory = "0.3"
yew_extra = { version = "0.2.0" }

[dev-dependencies]
axum = { version = "0.8.6", features = ["json", "multipart", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = "0.21"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
